minor updates to add byline and fix some styles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="http://www.blueprintcss.org/blueprint/screen.css" type="text/css" media="screen, projection"> 
     <link rel="stylesheet" href="media/main.css" type="text/css">
-    <script type="text/javascript" src="jquery.url.js">
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"  type="text/javascript" charset="utf-8"></script>
     <style type="text/css">
       html { height: 100% }
@@ -41,6 +40,8 @@ Government and Non-Governmental Organizations can provide support to citizens du
 	  <h2>Who?</h2>
 Every citizen can utilize Disaster Mapper in order to better prepare themselves.  Share the tool with your family, friends, and co-workers to help spread the preparedness message.  Additionally, you can print the hazard page and display it in your home or work as a constant reminder to be ready for disaster.
 	</div>
+      </div>
+      <div class="span-24 byline">Created by <a href="mailto:hinz.adam@gmail.com">Adam Hinz</a> as part of <a href="http://www.rhok.org">Philadelphia Random Hacks of Kindess</a>
       </div>
     </div>
   </body>
