--- a/report.html
+++ b/report.html
@@ -20,14 +20,10 @@
 <!-- <body onload="initialize()"> -->
 <body style="height: 100%">
   <div id="flood_content" class="content">
-    <p>You are in <strong>Flood Zone 1A</strong> - this means that there will be a flood every 100 years that will sink your house like a boat.
+    <p class="replace">You are in <strong>Flood Zone _zone_</strong></p>
     </p>
-    <p>More info about flooding risks can be found at:</p>
-    <ul>
-      <li><a href="#">FEMA Gov</a></li>
-      <li><a href="#">Federal Flood Insurance</a></li>
-      <li><a href="#">Philadelphia Flood Watch</a></li>
-    </ul>
+    <p>
+      Flooding is the nation's most common natural disaster. All floods are not alike. Some can develop slowly during an extended period of rain, or in a warming trend following a heavy snow. Others, such as flash floods, can occur quickly, even without any visible signs of rain. It's important to be prepared for flooding no matter where you live, but particularly if you are in a low-lying area, near water or downstream from a dam. Even a very small stream or dry creek bed can overflow and create flooding.  For more information on how to prepare for them, visit the flood page at ReadyPhiladelphia.org.</p>
   </div>
   
   <div id="nuke_content" class="content">
@@ -57,7 +53,7 @@ Tornadoes are nature's most violent storms. They can appear suddenly without war
     </table>
     <a href="javascript:$.publish('/show/epa');" id="show_epa"></a>
     <p>
-      There are many facilities ranging from chemical plants to local auto repair shops that handle hazardous materials on a daily basis.  Some of these facilities may also be authorized to release products into the air or water.  In addition to the potential for a hazardous material accident causing a release into the environment, an explosion or fire may also be present.  It’s important to know the materials that may be stored or transported around your location.  For more information on how to prepare for an incident, visit the hazardous materials page at ReadyPhiladelphia.org.
+      There are many facilities ranging from chemical plants to local auto repair shops that handle hazardous materials on a daily basis.  Some of these facilities may also be authorized to release products into the air or water.  In addition to the potential for a hazardous material accident causing a release into the environment, an explosion or fire may also be present.  It is important to know the materials that may be stored or transported around your location.  For more information on how to prepare for an incident, visit the hazardous materials page at ReadyPhiladelphia.org.
     </p>
   </div>
 
@@ -76,5 +72,8 @@ Tornadoes are nature's most violent storms. They can appear suddenly without war
       <h1>Disaster Mapper</h1>
     </div>
     <div id="infoboxes" class="infoboxes span-24 full"></div>
+    <div class="span-24 byline">Created by <a href="mailto:hinz.adam@gmail.com">Adam Hinz</a> as part of <a href="http://www.rhok.org">Philadelphia Random Hacks of Kindess</a>
+    </div>
+  </div>
 </body>
 </html>
