--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
       body { height: 100%; margin: 0px; padding: 0px }
       #map_canvas { height: 100% }
     </style>
+    <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-23854222-1']);
+  _gaq.push(['_setDomainName', '.disastermapper.com']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
   </head>
   <body>
     <div class="container main">
